@startuml DER

skinparam classAttributeIconSize 0
hide circle

entity Usuario {
    id: Number <<PK>>
    ---
    idCarteira: Number <<FK>>
    nome: String
    email: String
    senha: String
    endereco: String
}

entity Instituicao {
    id: Number <<PK>>
    ---
    idUsuario: Number <<FK>>
}

entity Empresa {
    id: Number <<PK>>
    ---
    idUsuario: Number <<FK>>
}

entity Aluno {
    id: Number <<PK>>
    ---
    idCarteiraAluno: Number <<FK>>
    idUsuario: Number <<FK>>
    semestre: Number
}

entity Professor {
    id: Number <<PK>>
    ---
    idCarteiraProfessor: Number <<FK>>
    idUsuario: Number <<FK>>
    departamento: String
}

entity Transacao {
    id: Number <<PK>>
    ---
    idUsuarioRemetente: Number <<FK>>
    idUsuarioDestinatario: Number <<FK>>
    data: Timestamp
    valor: Number
    cupom: String NOT NULL
}

entity Vantagem {
    id: Number <<PK>>
    ---
    nome: String
    descricao: String
    foto: String
    custo: Number
}

entity Carteira {
    id: Number <<PK>>
    ---
    saldo: Number
    idResgateVantagens: Number <<FK>>
}

entity ResgateVantagem{
    id: Number <<PK>>
    ---
    idVantagem: Number <<FK>>
    idCupom: Number <<FK>>
}

entity Cupom{
    id: Number <<PK>>
}

'--------------------------------------
'RELACIONAMENTOS
'--------------------------------------



Empresa "1" ||--|{ "0..*" Vantagem

Cupom "1"--"1" ResgateVantagem

Carteira ||--o{ Transacao
Carteira "0..*"||--o{"1" ResgateVantagem

Usuario ||-- Professor
Usuario ||-- Aluno
Usuario ||-- Instituicao
Usuario ||-- Empresa

Professor "0..*" }o--|| "1" Instituicao
Carteira "1" -- "1" Usuario

@enduml